[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
src = "src/main.rs"

[lib]
name = "client"
path = "src/lib.rs"


[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
crossterm = "0.27.0"
ratatui = "0.24.0"
anyhow = "1.0.75"
