[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
src = "src/main.rs"

[lib]
name = "client"
path = "src/lib.rs"


[dependencies]
color-eyre = { version = "0.6.2", default-features = false }
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.24.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
futures = "0.3.28"
tui-input = "0.8.0"
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18"}
chrono = "0.4.19"