[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
src = "src/main.rs"

[lib]
name = "client"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.86"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.28.0"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
futures = "0.3.30"
tui-input = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18"}
chrono = "0.4.38"